--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/kanishkupadhyay/E-commerce-angular-database/issues"
   },
-  "homepage": "https://github.com/kanishkupadhyay/E-commerce-angular-database#readme"
+  "homepage": "https://github.com/kanishkupadhyay/E-commerce-angular-database#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "json-server": "^0.16.3"
+  }
 }
